# SPECTRE

./: .env.example  .gitignore  DEVELOPMENT_SPEC.md  FUNCTIONALITY_PROOF.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  cli.py  conftest.py  docker-compose.yml  install.sh  launch.sh  pyproject.toml  requirements.txt
config/: .env.example  adapters.yaml  targets.yaml
core/: __init__.py
core/adapters/: __init__.py  adapter_manager.py
core/capture/: __init__.py  capture_manager.py  deauth.py  validator.py
core/scanner/: __init__.py  models.py  network_scanner.py  parser.py
db/init/: 001-schema.sql  002-hypertables-and-rules.sql  003-pipeline-enrichment.sql
docs/: kismet-bug-fix.md
quickstart/: __init__.py  preflight.py  real_wizard.py  wizard.py
services/: __init__.py  scanner_service.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/preflight/: __init__.py  adapter_detect.py
src/wifi_launchpad/: __init__.py  __main__.py
src/wifi_launchpad/app/: __init__.py  paths.py  settings.py
src/wifi_launchpad/cli/: __init__.py  common.py  main.py
tests/: test_adapter_roles.py  test_architecture.py  test_dual_ops.py  test_evil_portal_provider.py  test_kismet_integration.py  test_orchestration.py  test_project_sop.py  test_quickstart_packaging.py  test_scanner.py  test_services.py  test_survey_backends.py
wordlists/: download_wordlists.py  master-wifi-wordlist.txt
wordlists/default-passwords/: router-defaults.txt
wordlists/isp-specific/: isp-patterns.txt
wordlists/targeted/: common-wifi.txt  top-100-wifi.txt
(+100 files in other folders)
